@@ -99,6 +99,9 @@ import org.springframework.beans.factory.annotation.Required;
 import com.tisl.mpl.constants.MarketplacecommerceservicesConstants;
 import com.tisl.mpl.constants.MplConstants;
 import com.tisl.mpl.constants.clientservice.MarketplacecclientservicesConstants;
+import com.tisl.mpl.core.enums.ClickAndCollectEnum;
+import com.tisl.mpl.core.enums.ExpressDeliveryEnum;
+import com.tisl.mpl.core.enums.HomeDeliveryEnum;
 import com.tisl.mpl.core.enums.PaymentModesEnum;
 import com.tisl.mpl.core.model.BrandModel;
 import com.tisl.mpl.core.model.BuyBoxModel;
@@ -780,15 +783,15 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc : used to fetch delivery mode description details TISEE-950
-	 * 
+	 *
 	 * @param ussId
-	 * 
+	 *
 	 * @param deliveryMode
-	 * 
+	 *
 	 * @param startTime
-	 * 
+	 *
 	 * @param endTime
-	 * 
+	 *
 	 * @return String
 	 */
 
@@ -961,12 +964,12 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 	 * @param allWishlists
 	 * @param pincode
 	 * @return : List<Wishlist2EntryModel>
-	 * @throws CMSItemNotFoundException
+	 * @throws EtailNonBusinessExceptions
 	 */
 	@Override
 	public List<Wishlist2EntryModel> getGiftYourselfDetailsMobile(final int minGiftQuantity,
-			final List<Wishlist2Model> allWishlists, final String pincode, final Collection<CartModel> cartModelList)
-			throws CMSItemNotFoundException
+			final List<Wishlist2Model> allWishlists, final String pincode, final CartModel cartModel)
+			throws EtailNonBusinessExceptions
 	{
 
 		final List<Wishlist2EntryModel> productDataList = new ArrayList<Wishlist2EntryModel>();
@@ -980,24 +983,20 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 				for (final Wishlist2EntryModel entryWishlist : wishlistEntry.getEntries())//getting the latest two
 				{
-					if (null != cartModelList && !cartModelList.isEmpty())
-					{
-						for (final CartModel cart : cartModelList)
-						{
-							if (null != cart.getEntries() && !cart.getEntries().isEmpty())
-							{
-								for (final AbstractOrderEntryModel entry : cart.getEntries())
-								{
 
-									if (null != entry.getSelectedUSSID() && !entry.getSelectedUSSID().isEmpty()
-											&& null != entryWishlist.getUssid() && !entryWishlist.getUssid().isEmpty()
-											&& entry.getSelectedUSSID().equalsIgnoreCase(entryWishlist.getUssid()))
-									{
-										productExistInCartList.add(entryWishlist);
-									}
-								}
+					if (null != cartModel.getEntries() && !cartModel.getEntries().isEmpty())
+					{
+						for (final AbstractOrderEntryModel entry : cartModel.getEntries())
+						{
+
+							if (null != entry.getSelectedUSSID() && !entry.getSelectedUSSID().isEmpty()
+									&& null != entryWishlist.getUssid() && !entryWishlist.getUssid().isEmpty()
+									&& entry.getSelectedUSSID().equalsIgnoreCase(entryWishlist.getUssid()))
+							{
+								productExistInCartList.add(entryWishlist);
 							}
 						}
+
 					}
 					productDataList.add(entryWishlist);
 				}
@@ -1019,13 +1018,10 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 			Collections.sort(productDataList, fieldComparator);
 			LOG.info("Sorted productDataList" + productDataList);
 
-			if (CollectionUtils.isNotEmpty(cartModelList) && (((List<CartModel>) cartModelList).get(0) != null))
-			{
-				//finalgiftList = preparingFinalList(productDataList, pincode, (((List<CartModel>) cartModelList).get(0))); // TISPT-179 Point 3
-				final Tuple2<?, ?> wishListPincodeObject = preparingFinalList(productDataList, pincode,
-						(((List<CartModel>) cartModelList).get(0)));
-				finalgiftList = (List<Wishlist2EntryModel>) wishListPincodeObject.getFirst();
-			}
+			//finalgiftList = preparingFinalList(productDataList, pincode, (((List<CartModel>) cartModelList).get(0))); // TISPT-179 Point 3
+			final Tuple2<?, ?> wishListPincodeObject = preparingFinalList(productDataList, pincode, cartModel);
+			finalgiftList = (List<Wishlist2EntryModel>) wishListPincodeObject.getFirst();
+
 		}
 		return finalgiftList;
 	}
@@ -1085,7 +1081,7 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 	 */
 
 	private Tuple2<List<?>, List<?>> preparingFinalList(final List<Wishlist2EntryModel> productDataList, final String pincode,
-			final CartModel cartModel) throws CMSItemNotFoundException
+			final CartModel cartModel) throws EtailNonBusinessExceptions
 	{
 		final List<Wishlist2EntryModel> giftList = new ArrayList<Wishlist2EntryModel>();
 		List<PinCodeResponseData> pinCodeResponseDataList = null;
@@ -1209,11 +1205,11 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc checking wishlist entry is valid or not , delisted , end date , online from TISEE-5185
-	 * 
+	 *
 	 * @param wishlistEntryModel
-	 * 
+	 *
 	 * @return boolean
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	@Override
@@ -1260,11 +1256,11 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc creating pin code service data for pincode serviceability for wishlist
-	 * 
+	 *
 	 * @param sortedWishListMap
-	 * 
+	 *
 	 * @return List<PincodeServiceData>
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	private List<PincodeServiceData> fetchWishlistPincodeRequestData(
@@ -1311,6 +1307,7 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 					{
 						LOG.info("preparingFinalList sellerInfoModel is null ");
 					}
+					//TISPRD-3072
 
 					final List<MplZoneDeliveryModeValueModel> deliveryModes = getMplDeliveryCostService().getDeliveryModesAndCost(
 							MarketplacecommerceservicesConstants.INR, wishlist2EntryModel.getUssid());
@@ -1318,16 +1315,35 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 					{
 						for (final MplZoneDeliveryModeValueModel deliveryEntry : deliveryModes)
 						{
-							final MarketplaceDeliveryModeData deliveryModeData = new MarketplaceDeliveryModeData();
-							final PriceData priceData = formPriceData(deliveryEntry.getValue());
-							deliveryModeData.setCode(deliveryEntry.getDeliveryMode().getCode());
-							deliveryModeData.setDescription(deliveryEntry.getDeliveryMode().getDescription());
-							deliveryModeData.setName(deliveryEntry.getDeliveryMode().getName());
-							deliveryModeData.setSellerArticleSKU(wishlist2EntryModel.getUssid());
-							deliveryModeData.setDeliveryCost(priceData);
-							deliveryModeDataList.add(deliveryModeData);
+
+							if ((null != richAttributeModel.get(0).getHomeDelivery()
+									&& richAttributeModel.get(0).getHomeDelivery().equals(HomeDeliveryEnum.YES) && StringUtils
+										.equalsIgnoreCase(deliveryEntry.getDeliveryMode().getCode(),
+												MarketplacecommerceservicesConstants.HOME_DELIVERY))
+									|| (null != richAttributeModel.get(0).getExpressDelivery()
+											&& richAttributeModel.get(0).getExpressDelivery().equals(ExpressDeliveryEnum.YES) && StringUtils
+												.equalsIgnoreCase(deliveryEntry.getDeliveryMode().getCode(),
+														MarketplacecommerceservicesConstants.EXPRESS_DELIVERY))
+
+									|| (null != richAttributeModel.get(0).getClickAndCollect()
+											&& richAttributeModel.get(0).getClickAndCollect().equals(ClickAndCollectEnum.YES) && StringUtils
+												.equalsIgnoreCase(deliveryEntry.getDeliveryMode().getCode(),
+														MarketplacecommerceservicesConstants.CLICK_COLLECT)))
+							{
+								final MarketplaceDeliveryModeData deliveryModeData = new MarketplaceDeliveryModeData();
+								final PriceData priceData = formPriceData(deliveryEntry.getValue());
+								deliveryModeData.setCode(deliveryEntry.getDeliveryMode().getCode());
+								deliveryModeData.setDescription(deliveryEntry.getDeliveryMode().getDescription());
+								deliveryModeData.setName(deliveryEntry.getDeliveryMode().getName());
+								deliveryModeData.setSellerArticleSKU(wishlist2EntryModel.getUssid());
+								deliveryModeData.setDeliveryCost(priceData);
+								deliveryModeDataList.add(deliveryModeData);
+							}
+
 						}
 					}
+					//TISPRD-3072 ends
+
 					pincodeServiceData.setFullFillmentType(fullfillmentType.toUpperCase());
 					if (richAttributeModel.get(0).getShippingModes() != null
 							&& richAttributeModel.get(0).getShippingModes().getCode() != null)
@@ -1363,6 +1379,7 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 						LOG.debug("wishlist2EntryModel product is null ");
 					}
 					pincodeServiceData.setDeliveryModes(deliveryModeDataList);
+
 					pincodeServiceData.setIsDeliveryDateRequired(MarketplacecommerceservicesConstants.N);
 					pincodeRequestDataList.add(pincodeServiceData);
 				}
@@ -1373,11 +1390,11 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc creating pin code service data for pincode serviceability for wishlist
-	 * 
+	 *
 	 * @param sortedWishListMap
-	 * 
+	 *
 	 * @return List<PincodeServiceData>
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	private List<PincodeServiceData> fetchWishlistPincodeRequestDataMobile(final Wishlist2EntryModel wishlist2EntryModel)
@@ -1545,38 +1562,21 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 	 */
 
 	@Override
-	public boolean addItemToCart(final String cartId, final String productCode, final long quantity, final String ussid)
-			throws InvalidCartException, CommerceCartModificationException
+	public boolean addItemToCart(final String cartId, final CartModel cartModel, final ProductModel productModel,
+			final long quantity, final String ussid) throws InvalidCartException, CommerceCartModificationException
 	{
 		boolean success = false;
 		CartData cartData = null;
-		CartModel cartModel = null;
-		ProductModel productModel = null;
 		final CommerceCartParameter parameter = new CommerceCartParameter();
 		CartModificationData cartModificationData = null;
 		String sellerUssId = null;
 
-		if (cartId != null && !cartId.isEmpty() && productCode != null && !productCode.isEmpty())
+		if (cartModel != null)
 		{
-			if (getUserFacade().isAnonymousUser())
-			{
-				cartModel = getCartService().getSessionCart();
-			}
-			else
-			{
-				// Check if cart id is valid or not
-				cartModel = getMplCommerceCartDao().getCart(cartId);
-				if (cartModel == null)
-				{
-					throw new CommerceCartModificationException("Invalid cart id " + cartId);
-				}
-			}
-
 			// Check if product code is valid or not
-			productModel = getProductService().getProductForCode(productCode);
 			if (productModel == null)
 			{
-				throw new CommerceCartModificationException("Invalid product code " + productCode);
+				throw new CommerceCartModificationException("Invalid ussid " + ussid);
 			}
 
 			//check if quantity is valid or not
@@ -1586,7 +1586,6 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 			}
 
 			cartData = getCartConverter().convert(cartModel);
-
 			// Check if ussid is null then fetch ussid
 			if (ussid == null || ussid.isEmpty())
 			{
@@ -1597,7 +1596,7 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 				sellerUssId = ussid;
 			}
 			//			if (isMaxQuantityAlreadyAdded(cartData, productCode))
-			if (isMaxQuantityAlreadyAdded(cartData, sellerUssId, quantity, productCode))
+			if (isMaxQuantityAlreadyAdded(cartData, sellerUssId, quantity, productModel.getCode()))
 			{
 				parameter.setEnableHooks(true);
 				parameter.setCart(cartModel);
@@ -2257,13 +2256,13 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc fetching reservation details
-	 * 
+	 *
 	 * @param cartId
-	 * 
+	 *
 	 * @param cartData
-	 * 
+	 *
 	 * @param pincode
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	@Override
@@ -2357,11 +2356,11 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc converting response to dto
-	 * 
+	 *
 	 * @param inventoryReservListResponse
-	 * 
+	 *
 	 * @return List<ReservationItemWsDTO>
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	private List<ReservationItemWsDTO> converter(final InventoryReservListResponse inventoryReservListResponse)
@@ -2398,11 +2397,11 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc populating data for soft reservation
-	 * 
+	 *
 	 * @param cartData
-	 * 
+	 *
 	 * @return List<CartSoftReservationData>
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	public List<CartSoftReservationData> populateDataForSoftReservation(final CartData cartData) throws EtailNonBusinessExceptions
@@ -2475,21 +2474,20 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @DESC MobileWS105 : get top two wish list for mobile web service
-	 * 
+	 *
 	 * @param userModel
-	 * 
+	 *
 	 * @param pincode
-	 * 
+	 *
 	 * @return GetWishListWsDTO
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 
 	@Override
-	public GetWishListWsDTO getTopTwoWishlistForUser(final UserModel userModel, final String pincode,
-			final Collection<CartModel> cartModelList) throws CMSItemNotFoundException
+	public GetWishListWsDTO getTopTwoWishlistForUser(final UserModel userModel, final String pincode, final CartModel cartModel)
+			throws EtailNonBusinessExceptions
 	{
-
 		GetWishListWsDTO getWishListWsDTO = new GetWishListWsDTO();
 		List<Wishlist2EntryModel> sortedWishList = new ArrayList<Wishlist2EntryModel>();
 		boolean wishlistNonExist = false;
@@ -2504,7 +2502,7 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 		final int minGiftQuantity = siteConfigService.getInt("mpl.cart.giftQuantity.lineItem", 0);
 
 
-		sortedWishList = getGiftYourselfDetailsMobile(minGiftQuantity, allWishlists, pincode, cartModelList);
+		sortedWishList = getGiftYourselfDetailsMobile(minGiftQuantity, allWishlists, pincode, cartModel);
 
 		if (null != sortedWishList && !sortedWishList.isEmpty())
 		{
@@ -2555,9 +2553,9 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @param sortedWishListMap
-	 * 
+	 *
 	 * @return GetWishListWsDTO
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	private GetWishListWsDTO getWishListWebserviceDetails(final Map<String, List<Wishlist2EntryModel>> sortedWishListMap,
@@ -2795,13 +2793,13 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc For webservice
-	 * 
+	 *
 	 * @param buyBoxModelList
-	 * 
+	 *
 	 * @param getWishListProductWsObj
-	 * 
+	 *
 	 * @return GetWishListProductWsDTO
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 
@@ -2830,11 +2828,11 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc For webservice
-	 * 
+	 *
 	 * @param wishlist2EntryModel
-	 * 
+	 *
 	 * @param getWishListProductWsObj
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	private GetWishListProductWsDTO setWSWishlistEligibleDeliveryMode(final Wishlist2EntryModel wishlist2EntryModel,
@@ -2961,13 +2959,13 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @DESC TISST-6994,TISST-6990 adding to cart COD eligible or not with Pincode serviceabilty and sship product
-	 * 
+	 *
 	 * @param deliveryModeMap
-	 * 
+	 *
 	 * @param pincodeResponseData
-	 * 
+	 *
 	 * @return boolean
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	@Override
@@ -3259,11 +3257,11 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc fetching state details for a state name
-	 * 
+	 *
 	 * @param stateName
-	 * 
+	 *
 	 * @return StateModel
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 
@@ -3288,9 +3286,9 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc to generate Sub order id
-	 * 
+	 *
 	 * @return String
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	@Override
@@ -3301,9 +3299,9 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc to generate Order Line id and transaction id
-	 * 
+	 *
 	 * @return String
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	@Override
@@ -3315,9 +3313,9 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc to generate Order Id
-	 * 
+	 *
 	 * @return String
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	@Override
@@ -3329,13 +3327,13 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @Desc used for inventory soft reservation from Commerce Checkout and Payment
-	 * 
+	 *
 	 * @param requestType
-	 * 
+	 *
 	 * @param abstractOrderModel
-	 * 
+	 *
 	 * @return boolean
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	@Override
@@ -3497,9 +3495,9 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @description:Populate data to CartSoftReservationData
-	 * 
+	 *
 	 * @return:List<CartSoftReservationData>
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 
@@ -3689,6 +3687,10 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 								{
 									final String fulfillmentType = richAttributeModel.get(0).getDeliveryFulfillModes().getCode();
 									cartSoftReservationData.setFulfillmentType(fulfillmentType.toUpperCase());
+									if (entryModel.getGiveAway().booleanValue())
+									{
+										setFullFillmentTypeForFreebie(cartSoftReservationData, abstractOrderModel);
+									}
 								}
 								else
 								{
@@ -3708,6 +3710,72 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 		}
 		return cartSoftReservationDataList;
 	}
+
+
+	/**
+	 * This method is used to set fullFillMent type for a product
+	 *
+	 * @author TECHOUTS
+	 * @param cartSoftReservationData
+	 * @param abstractOrderModel
+	 * @return void
+	 */
+	private void setFullFillmentTypeForFreebie(final CartSoftReservationData cartSoftReservationData,
+			final AbstractOrderModel abstractOrderModel) throws EtailNonBusinessExceptions
+	{
+		try
+		{
+			final String parentUSSID = cartSoftReservationData.getParentUSSID();
+			String parentFullfillmenttype = StringUtils.EMPTY;
+			final String freebieFullfillmenttype = cartSoftReservationData.getFulfillmentType();
+			for (final AbstractOrderEntryModel entry : abstractOrderModel.getEntries())
+			{
+				if (entry.getSelectedUSSID().equalsIgnoreCase(parentUSSID))
+				{
+					parentFullfillmenttype = getFullfillmentTypeByUSSID(entry.getSelectedUSSID());
+				}
+				if (parentFullfillmenttype.equalsIgnoreCase(MarketplacecommerceservicesConstants.SSHIPCODE)
+						&& freebieFullfillmenttype.equalsIgnoreCase(MarketplacecommerceservicesConstants.TSHIPCODE))
+				{
+					cartSoftReservationData.setFulfillmentType(parentFullfillmenttype);
+				}
+
+			}
+		}
+		catch (final Exception e)
+		{
+			LOG.error("Exception while setting fullFillment type for freebie" + e.getCause());
+		}
+	}
+
+
+	/**
+	 * this Method is used to get the fullFillMent type for a product using USSID
+	 *
+	 * @author TECHOUTS
+	 * @param selectedUSSID
+	 * @return String
+	 *
+	 */
+	private String getFullfillmentTypeByUSSID(final String selectedUSSID)
+	{
+		String fulfillmentType = StringUtils.EMPTY;
+		final SellerInformationModel sellerInfoModel = getMplSellerInformationService().getSellerDetail(selectedUSSID);
+		List<RichAttributeModel> richAttributeModel = null;
+		if (sellerInfoModel != null && sellerInfoModel.getRichAttribute() != null)
+		{
+			richAttributeModel = (List<RichAttributeModel>) sellerInfoModel.getRichAttribute();
+			if (richAttributeModel != null && richAttributeModel.get(0) != null
+					&& richAttributeModel.get(0).getDeliveryFulfillModes() != null
+					&& richAttributeModel.get(0).getDeliveryFulfillModes().getCode() != null)
+			{
+				fulfillmentType = richAttributeModel.get(0).getDeliveryFulfillModes().getCode();
+				return fulfillmentType.toUpperCase();
+			}
+		}
+		return fulfillmentType.toUpperCase();
+	}
+
 
 
 
@@ -3847,11 +3915,11 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @DESC : Inventory list to be generated for TISPRD-2758
-	 *
+	 * 
 	 * @param abstractOrderModel
-	 *
+	 * 
 	 * @param entryModel
-	 *
+	 * 
 	 * @return Tuple2<?, ?>
 	 */
 	private Tuple2<?, ?> getFreebieInventoryList(final AbstractOrderModel abstractOrderModel,
@@ -3894,13 +3962,13 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @DESC : Inventory list to be generated for TISPRD-2758
-	 *
+	 * 
 	 * @param abstractOrderModel
-	 *
+	 * 
 	 * @param entryModel
-	 *
+	 * 
 	 * @param productPromoCode
-	 *
+	 * 
 	 * @return List<CartSoftReservationData>
 	 */
 	private List<CartSoftReservationData> populateFreebieInventoryData(final AbstractOrderModel abstractOrderModel,
@@ -4637,15 +4705,15 @@ public class MplCommerceCartServiceImpl extends DefaultCommerceCartService imple
 
 	/*
 	 * @desc use to save freebie delivery mode
-	 * 
+	 *
 	 * @param cartModel
-	 * 
+	 *
 	 * @param freebieModelMap
-	 * 
+	 *
 	 * @param freebieParentQtyMap
-	 * 
+	 *
 	 * @return void
-	 * 
+	 *
 	 * @throws EtailNonBusinessExceptions
 	 */
 	@Override
